--- a/roles/hosted_engine_setup/tasks/bootstrap_local_vm/05_add_host.yml
+++ b/roles/hosted_engine_setup/tasks/bootstrap_local_vm/05_add_host.yml
@@ -220,7 +220,9 @@
       auth: "{{ ovirt_auth }}"
     register: host_result_up_check
     ignore_errors: true
-
+  - name: Debug
+    debug:
+      var: host_result_up_check
   - name: Handle deployment failure
     block:
       - set_fact: host_id={{ host_result_up_check.ovirt_hosts[0].id }}
